// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqPolicySetStructuredList should render policy set info structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_policy_set_info"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_policy_set_info"
    rows={
      Array [
        Object {
          "label": "Description",
          "value": "bar",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqPolicySetStructuredList should render policy set notes structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_policy_set_notes"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_policy_set_notes"
    rows={
      Array [
        Object {
          "value": Object {
            "input": "text_area",
            "readonly": true,
            "rows": 4,
            "text": "text area description",
          },
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqPolicySetStructuredList should render policy set structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_policy_set"
>
  <MiqStructuredListBody
    clickEvents={false}
    mode="miq_policy_set"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "bold": true,
              "icon": "pficon pficon-image",
              "value": "Container Image Compliance",
            },
            "OpenSCAP",
          ],
          "onclick": "DoNav('/miq_policy/show/1');",
          "title": "View this Container Image Policy",
        },
        Object {
          "cells": Array [
            Object {
              "bold": true,
              "icon": "pficon pficon-image",
              "value": "Container Image Control",
            },
            "My scan",
          ],
          "onclick": "DoNav('/miq_policy/show/17');",
          "title": "View this Container Image Policy",
        },
        Object {
          "cells": Array [
            Object {
              "bold": true,
              "icon": "pficon pficon-image",
              "value": "Container Image Control",
            },
            "Schedule compliance",
          ],
          "onclick": "DoNav('/miq_policy/show/3');",
          "title": "View this Container Image Policy",
        },
        Object {
          "cells": Array [
            Object {
              "bold": true,
              "icon": "pficon pficon-container-node",
              "value": "Container Node Control",
            },
            "loic Node",
          ],
          "onclick": "DoNav('/miq_policy/show/18');",
          "title": "View this Container Node Policy",
        },
        Object {
          "cells": Array [
            Object {
              "bold": true,
              "icon": "pficon pficon-virtual-machine",
              "value": "VM and Instance Control",
            },
            "OpenStack Application",
          ],
          "onclick": "DoNav('/miq_policy/show/16');",
          "title": "View this VM and Instance Policy",
        },
      ]
    }
  />
</FeatureToggle(StructuredListWrapper)>
`;
